@@ -35,7 +35,7 @@ my %WriteMakefileArgs = (
     "IO::Async::Notifier" => "0.78",
     "IO::Async::SSL" => "0.22",
     "IO::Async::Test" => "0.78",
-    "JSON::MaybeUTF8" => "1.002",
+    "JSON::MaybeUTF8" => "2.000",
     "Log::Any" => "1.709",
     "Log::Any::Adapter" => "1.709",
     "Log::Any::Adapter::OpenTracing" => "0.001",
@@ -112,7 +112,7 @@ my %FallbackPrereqs = (
   "IO::Async::Test" => "0.78",
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "JSON::MaybeUTF8" => "1.002",
+  "JSON::MaybeUTF8" => "2.000",
   "Log::Any" => "1.709",
   "Log::Any::Adapter" => "1.709",
   "Log::Any::Adapter::OpenTracing" => "0.001",
